Changed directory structure and updated README.md

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LinkedIn Photo Optimizer</title>
+    <title>LinkedInPicker - AI Photo Finder</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
         <!-- Header -->
         <header class="header">
-            <h1>🎯 LinkedIn Photo Optimizer</h1>
-            <p>Transform your photos into professional LinkedIn profile pictures</p>
+            <h1>🎯 LinkedInPicker</h1>
+            <p>Your AI pal digs through your photo gallery, finds the best shots for LinkedIn, and sharpens 'em up for you. Don't worry, he's got this.</p>
         </header>
 
         <!-- Reference Image Section -->
